# predictive_coding_rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  TODO.md  build.rs  notes.md
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflows/: test-suite.yml
benchmark_data/: benchmark_config.json  benchmark_minibatch_config.json  benchmark_singlethread_config.json  initial_model.json  model_config.json
benchmark_data/1772629565/: bench_run.csv  params.json
benchmark_data/benchmark_2026-03-25T22:42:14/: bench__bench_run.csv  bench__model_config.json  bench__result.json
benchmark_data/benchmark_2026-03-25T22:43:02/: bench__bench_run.csv  bench__result.json  bench__training_config.json
benchmark_data/benchmark_2026-03-25T23:20:39/: bench__bench_run.csv  bench__result.json  bench__training_config.json
benchmark_data/benchmark_2026-03-25T23:21:01/: bench__bench_run.csv  bench__result.json
docs/: intel-gpu-rust-learning-ladder.md  model-config.md  training-config.md
examples/: test_liveplot.rs  test_load_data.rs
proto/: train_model.proto
scripts/: grab_mnist.sh
src/: benchmark.rs  data_handler.rs  error.rs  evaluate.rs  generate.rs  infer.rs  lib.rs  model.rs  model_utils.rs  test-liveplot.rs  test_utils.rs  train.rs  train_data_handler.rs  train_grpc_client.rs  train_model_handler.rs  training_data_handler.rs
src/data_handling/: data_handler.rs  image_utils.rs  mnist.rs  mod.rs
src/gpu_playground/: README.md  intel.rs  introduction.wgsl  mod.rs
src/inference/: evaluation_handler.rs  inference_model_handler.rs  mod.rs
src/model/: cpu.rs  file_handling.rs  maths.rs  mod.rs  model.rs  model_structure.rs  model_utils.rs  runtime.rs  snapshot.rs
src/model_structure/: configuration.rs  mod.rs  model.rs  model_utils.rs
src/training/: configuration.rs  cpu_train.rs  get_handler.rs  mod.rs  setup.rs  train_handler.rs  train_model_handler.rs  utils.rs  validation.rs
src/training/cpu/: minibatch.rs  mod.rs  singlethreaded.rs
src/training/handlers/: minibatch.rs  mod.rs  singlethreaded.rs
src/utils/: logging.rs  mod.rs
test_data/: README.md  bench_minibatch_config.json  bench_single_thread_config.json  model_snapshot_tiny.json  train_minibatch_config.json  train_single_thread_config.json
test_data/baselines/: README.md
test_data/baselines/mini_batch/bench/: benchmark_bench_run.csv  benchmark_final_model.json  benchmark_result.json  (+1 more)
test_data/mnist/: train-images-idx3-ubyte
tests/: bench_smoke.rs  eval_smoke.rs  train_smoke.rs
tests/common/: mod.rs
(+13 files in other folders)
