[package]
name = "predictive_coding"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "infer"
path = "src/infer.rs"

[[bin]]
name = "train_grpc_client"
path = "src/train_grpc_client.rs"

[[example]]
name = "test-liveplot"
path = "examples/test_liveplot.rs"

[[example]]
name = "test-load-data"
path = "examples/test_load_data.rs"

[dependencies]
async-stream = "0.3.6"
chrono = "0.4.44"
eframe = "0.33.3"
futures-core = "0.3.32"
image = "0.25.9"
liveplot = { version = "2.0.1", features = ["grpc"] }
ndarray = { version = "0.17.2", features = ["serde"] }
prost = "0.14.3"
rand = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.49.0"
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"
