[package]
name = "predictive_coding"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "infer"
path = "src/infer.rs"

[[bin]]
name = "generate"
path = "src/generate.rs"

[[example]]
name = "test-load-data"
path = "examples/test_load_data.rs"

[dependencies]
chrono = "0.4.44"
image = "0.25.9"
ndarray = { version = "0.17.2", features = ["serde"] }
rand = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
