[package]
name = "predictive_coding"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gpu_test"
path = "src/gpu_playground/wgpu_helloworld.rs"
required-features = ["gpu"]

[[bin]]
name = "bench"
path = "src/benchmark.rs"

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "eval"
path = "src/evaluate.rs"

[features]
# GPU support is opt-in to avoid pulling in heavy GPU dependencies for CPU-only builds.
default = []
gpu = ["dep:wgpu", "dep:tokio", "dep:bytemuck"]

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
ndarray = { version = "0.17.2", features = ["serde"] }
rand = "0.10.0"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
bytemuck = { version = "1.25.0", optional = true }
tokio = { version = "1.50.0", optional = true, features = ["full"] }
wgpu = { version = "28.0.0", optional = true }
